--- a/templates/base.html
+++ b/templates/base.html
@@ -100,8 +100,8 @@
       {% endblock content %}
     </main>
   <!-- Footer -->
-  <footer class="footer text-white bg-secondary fixed-bottom">
-      <p class="text-center bg-secondary">© Barry Mays 2024
+  <footer class="footer text-white bg-secondary">
+      <p class="text-center bg-secondary">© Barry Mays 2025
           <!-- <a href="https://github.com/bmays9" target="_blank" aria-label="Barry Mays Github"><i class="fab fa-2x fa-github ms-3 text-white bg-secondary"></i></a> -->
           <!-- <a href="mailto:barrykmays@gmail.com" aria-label="Email Barry Mays"><i class="fa-2x fa-regular fa-envelope ms-3 text-white bg-secondary"></i></a> -->
       </p>
