--- a/staticfiles/css/custom_style.css
+++ b/staticfiles/css/custom_style.css
@@ -21,6 +21,7 @@ main {
   max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
+  min-height: 100dvh;
   font-family: sans-serif;
   box-sizing: border-box;
 }
@@ -36,6 +37,10 @@ main {
 .fixture {
     font-size: 0.9rem;
     padding-left: 20px;
+}
+
+.container {
+  display: flex;
 }
 
 /* Score Predict */
