--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,8 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Play</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="/horse.html">Horse Racing</a>
+                <!-- <a class="dropdown-item" href="/horse.html">Horse Racing</a> -->
+                <a class="dropdown-item" href="#">Horse Racing</a>
               </div>
             </li>
             <li class="nav-item dropdown">
