--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <!-- content starts here -->
 
-<p>THis is on the index page</p>
+<p>This is on the index page</p>
 
 <!-- content ends here -->
 {% endblock content %}
