--- a/score_predict/templates/score_predict/game_detail.html
+++ b/score_predict/templates/score_predict/game_detail.html
@@ -31,7 +31,7 @@
                     <th> </th>
                     <th>Away Team</th>
                     <th>Prediction</th>
-                    <th>Pred Score/th>
+                    <th>Pred Score</th>
                     <th>Pts</th>
                 </tr>
                 </thead>
