--- a/templates/base.html
+++ b/templates/base.html
@@ -27,13 +27,13 @@
         <!-- Favicon -->
         <link rel="shortcut icon" href="{% static 'images/favicon/favicon.ico' %}" />
         <link rel="apple-touch-icon-precomposed" href="{% static 'images/favicon/football-soccer-ball-152-183228.png' %}">
-        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{% static 'images/favicon/football-soccer-ball-152-183228.png %}">
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static 'images/favicon/football-soccer-ball-152-183228.png %}">
-        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{% static 'images/favicon/football-soccer-ball-152-183228.png %}">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static 'images/favicon/football-soccer-ball-152-183228.png %}">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static 'images/favicon/football-soccer-ball-152-183228.png %}">
-        <link rel="apple-touch-icon-precomposed" href="{% static 'images/favicon/football-soccer-ball-152-183228.png %}">
-        <link rel="icon" href="{% static 'images/favicon/football-soccer-ball-152-183228.png %}" sizes="32x32">
+        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{% static 'images/favicon/football-soccer-ball-152-183228.png' %}">
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static 'images/favicon/football-soccer-ball-152-183228.png' %}">
+        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{% static 'images/favicon/football-soccer-ball-152-183228.png' %}">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static 'images/favicon/football-soccer-ball-152-183228.png' %}">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static 'images/favicon/football-soccer-ball-152-183228.png' %}">
+        <link rel="apple-touch-icon-precomposed" href="{% static 'images/favicon/football-soccer-ball-152-183228.png' %}">
+        <link rel="icon" href="{% static 'images/favicon/football-soccer-ball-152-183228.png' %}" sizes="32x32">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
