--- a/score_predict/templates/score_predict/fixtures.html
+++ b/score_predict/templates/score_predict/fixtures.html
@@ -44,7 +44,7 @@
         {% if user.is_authenticated %}
         <div class="col">
             {% if group_entries %}
-            <input type="hidden" id="game-template-slug" value="{{ game_template.slug }}">
+            <input type="hidden" id="game-template-slug" class="form-label mt-4 group-drop" value="{{ game_template.slug }}">
             <label for="sp-group-select"></label>
                 <select id="sp-group-select" name="group_id" class="form-select">
                 {% for entry in group_entries %}
@@ -126,7 +126,7 @@
             <div id="collapse{{ forloop.counter }}" class="accordion-collapse collapse {% if forloop.first %}show{% endif %}"
                 aria-labelledby="heading{{ forloop.counter }}"
                 data-bs-parent="#accordionExample">
-                <div class="accordion-body py-2 px-3">
+                <div class="accordion-body py-2 px-3 small-font">
                     {% if fixtures %}
                     <ul class="list-group list-group-flush">
                         {% for fixture in fixtures %}
