--- a/lms/templates/lms/dashboard.html
+++ b/lms/templates/lms/dashboard.html
@@ -32,4 +32,20 @@
 {% else %}
   <p>You’re not entered into any active LMS games yet.</p>
 {% endif %}
+
+<a href="{% url 'lms_create_game' %}" class="btn btn-success mb-3">+ Create New Game</a>
+
+{% if games %}
+    <ul>
+    {% for game in games %}
+        <li>
+            <a href="{% url 'lms_game_detail' game.id %}">
+                {{ game.name }} ({{ game.get_league_display }})
+            </a>
+        </li>
+    {% endfor %}
+    </ul>
+{% else %}
+    <p>No games available. Why not <a href="{% url 'lms_create_game' %}">create one</a>?</p>
+    
 {% endblock %}
