LMS: Fix game creation form

--- a/lms/templates/lms/dashboard.html
+++ b/lms/templates/lms/dashboard.html
@@ -47,5 +47,7 @@
     </ul>
 {% else %}
     <p>No games available. Why not <a href="{% url 'lms_create_game' %}">create one</a>?</p>
-    
+  
+{% endif %}
+
 {% endblock %}
