--- a/lms/templates/lms/game_detail.html
+++ b/lms/templates/lms/game_detail.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h2>Last Man Standing - {{ game.league.name }}</h2>
+    <h2>Last Man Standing{{ game.league.name }}</h2>
     <p><strong>Group:</strong> {{ game.group.name }}</p>
 
     <div class="mb-3">
